IMPALA-5432: Remove invalid DCHECK from SetMemLimitExceeded

- SetMemLimitExeeded conditionally sets query_status to
  MEM_LIMIT_EXCEEDED if the current query_status is Ok.
- The DCHECK in SetMemLimitExceed unconditionally checked if the
  query_status is set to MEM_LIMIT_EXCEEDED.
  - It is possible that the query_status was set by some previous
  error that isn't a MEM_LIMIT_EXCEEDED error.

Change-Id: I1c03048ad15739baf7e68ca8d50930f3c45e71c5
Reviewed-on: http://gerrit.cloudera.org:8080/7075
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins